force-app/main/default/objects/RH_State_Code_By_Country_Name__mdt/RH_State_Code_By_Country_Name__mdt.object-meta.xml
<CustomObject>
    <label>RH State Code By Country Name</label>
    <pluralLabel>RH State Code By Country Names</pluralLabel>
</CustomObject>