force-app/main/default/objects/RH_State_Code_By_Country_Name__mdt/fields/RH_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>RH_Country_Name__c</fullName>
    <label>RH Country</label>
    <referenceTo>RH_Country_Name__mdt</referenceTo>
    <relationshipLabel>RH State Code By Country Names</relationshipLabel>
    <relationshipName>State_Code_By_Country_Names</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>