force-app/main/default/objects/RH_State_Code_By_Country_Name__mdt/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <label>State Code</label>
    <length>240</length>
    <type>Text</type>
</CustomField>