force-app/main/default/objects/RH_State_Code_By_Country_Name__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>State_Code__c</columns>
    <columns>State_Name__c</columns>
    <columns>RH_Country_Name__c</columns>
    <columns>IsVisible__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
    <language>en_US</language>
</ListView>